--- a/src/page-2.html
+++ b/src/page-2.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="../src/js/page-2.js"></script>
     <title>Page 2</title>
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 2</h1>
+      <ul class="gallery">
+    
+      </ul>
     </section>
   </body>
 </html>
