--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="../src/js/page-2.js"></script>
-    <title>Page 2</title>
+    <title>Gallery</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <section>
@@ -15,5 +17,6 @@
     
       </ul>
     </section>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
